# cargo-copter

./: .51  .gitignore  BUGFIXES.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  INSTALL.md  README.crates.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_FOR_TESTABILITY.md  REGRESSION_TEST_COVERAGE.md  SESSION_SUMMARY.md  TESTABILITY_QUICK_START.md  TEST_GAPS_SUMMARY.md  action.yml  copter-docker.sh  copter-report.json  copter-report.md  github-action.md  rustfmt.toml
.github/workflows/: ci.yml  copter-dependents-test.yml  docker-publish.yml  example-usage.yml  release.yml  rgb-compat-test.yml
docs/: CARGO_BEHAVIOR.md  PATCHING_STATE_MACHINE.md
src/: api.rs  bridge.rs  bridge_test.rs  categorize.rs  cli.rs  compile.rs  config.rs  config_test.rs  console_format.rs  console_format_test.rs  console_tables.rs  data_structures_test.rs  docker.rs  download.rs  error_extract.rs  git.rs  main.rs  manifest.rs  metadata.rs  report.rs  runner.rs  runner_test.rs  toml_helpers.rs  types.rs  ui.rs  version.rs
src/compile/: config.rs  executor.rs  logging.rs  mod.rs  patching.rs  retry.rs  types.rs
src/report/: export.rs  mod.rs  simple.rs  stats.rs  table.rs  types.rs
test-crates/fixtures/rust-rgb-breaking/: Cargo.toml
test-crates/integration-fixtures/: TRANSITIVE_RESOLUTION.md
test-crates/integration-fixtures/base-crate-v1/: Cargo.toml
test-crates/integration-fixtures/base-crate-v2/: Cargo.toml
test-crates/integration-fixtures/base-crate-v3/: Cargo.toml
test-crates/integration-fixtures/base-crate-v3/src/: lib.rs
test-crates/integration-fixtures/dependent-broken/: Cargo.toml
test-crates/integration-fixtures/dependent-passing/: Cargo.toml
test-crates/integration-fixtures/dependent-regressed/: Cargo.toml
test-crates/integration-fixtures/dependent-test-failing/: Cargo.toml
test-crates/integration-fixtures/dependent-test-passing/: Cargo.toml
test-crates/integration-fixtures/dependent-transitive-conflict/: Cargo.toml
test-crates/integration-fixtures/dependent-transitive-conflict/src/: lib.rs
test-crates/integration-fixtures/transitive-depth-1/: Cargo.toml
test-crates/integration-fixtures/transitive-depth-1/src/: lib.rs
test-crates/integration-fixtures/transitive-depth-2/: Cargo.toml
test-crates/integration-fixtures/transitive-depth-2/src/: lib.rs
test-crates/integration-fixtures/transitive-depth-3/: Cargo.toml
test-crates/integration-fixtures/transitive-depth-3/src/: lib.rs
test-crates/integration-fixtures/transitive-depth-4/: Cargo.toml
test-crates/integration-fixtures/transitive-depth-4/src/: lib.rs
test-fixtures/console-output/: README.md  all-passing-scenario.txt  regression-scenario.txt  skipped-version-scenario.txt
tests/: api_integration_test.rs  cli_parsing_test.rs  default_baseline_wip_test.rs  dependent_paths_test.rs  offline_integration.rs  table_alignment_test.rs  wip_breaking_change_test.rs
