[package]
version = "0.2.0"
name = "cargo-copter"
default-run = "cargo-copter"
authors = ["Lilith River <lilith@imazen.io"]
description = "Test dependents against multiple versions of your crate (or your local WIP before publishing). Inspired by the cargo-crusader"
license = "MIT/Apache-2.0"
repository = "https://github.com/imazen/cargo-copter"
edition = "2024"
readme = "README.md"
keywords = ["cargo", "testing", "dependencies", "compatibility", "ci", "cargo-subcommand", "semver", "cargo-crusader"]
categories = ["development-tools::cargo-plugins", "development-tools::testing", "command-line-utilities"]
# cargo-binstall configuration
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
semver = "1.0"
toml = "0.8"
toml_edit = "0.22"
log = "0.4"
env_logger = "0.11"
ureq = "2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
lazy_static = "1.4"
term = "0.7"
crates_io_api = { version = "0.12", default-features = false, features = ["rustls"] }
unicode-width = "0.1"
terminal_size = "0.3"
fs2 = "0.4"
chrono = "0.4"
tar = "0.4"
flate2 = "1.0"
dirs = "6.0"
